--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
-<ImageView
-    android:layout_width="200dp"
-    android:layout_height="200dp"
-    android:scaleType="fitXY"
-    android:id="@+id/thumbnail"
-    />
-</LinearLayout >
+
+    <ImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:scaleType="fitXY" />
+</RelativeLayout >
