--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -23,6 +23,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
         android:textSize="14sp"
+
+        todo hardcoded color bırakma
         android:textColor="#FFFF"
         android:scrollbars = "vertical"
         android:layout_marginRight="10dp"
