--- a/app/src/main/res/layout/album_layout.xml
+++ b/app/src/main/res/layout/album_layout.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     android:id="@+id/album_layout">
 
+    todo bunun adı adapter_album olacak
+
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="200dp"
