--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -17,7 +17,7 @@
         />
 
     <TextView
-        android:id="@+id/image_content"
+        android:id="@+id/imageContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
