--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="75"
-        android:contentDescription="@string/Fotoğraf"
+        android:contentDescription="@string/photo"
         android:scaleType="centerCrop"
         />
 
@@ -24,7 +24,6 @@
         android:layout_marginTop="15dp"
         android:textSize="14sp"
 
-        todo hardcoded color bırakma
         android:textColor="#FFFF"
         android:scrollbars = "vertical"
         android:layout_marginRight="10dp"
