--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"xmlns:app="http://schemas.android.com/apk/res-auto">
+   <data>
+<variable
+    name="image"
+    type="com.stylingandroid.databinding.data.Status" />
+
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
@@ -30,3 +37,4 @@
         />
 
 </LinearLayout>
+</layout>
